--- a/mydemo1/static/mydemo1/css/login.css
+++ b/mydemo1/static/mydemo1/css/login.css
@@ -50,3 +50,12 @@
     font-size: medium;
     color: white;
 }
+
+@media (max-width: 40em) {
+    .outerlogin .loginmain {
+        width: 90%;
+    }
+    .loginmain form {
+        width: 100%;
+    }
+}
