--- a/mydemo1/templates/mydemo1/home.html
+++ b/mydemo1/templates/mydemo1/home.html
@@ -15,7 +15,9 @@
     </div>
     <div class="mainRight">
         <!-- <img src="https://www.integrationworx.com/sites/default/files/styles/webp/public/glazed-cms-media/mdm_pic_1.png.webp?itok=pF5JzprA&fid=1747" alt=""> -->
-        <img src="{% static 'mydemo1/images/home_left.webp' %}" alt="">
+        <center>
+            <img src="{% static 'mydemo1/images/home_left.webp' %}" alt="">
+        </center>
     </div>
 </div>
 
