--- a/mydemo1/static/mydemo1/css/madeorg.css
+++ b/mydemo1/static/mydemo1/css/madeorg.css
@@ -57,3 +57,9 @@
     padding-bottom: 0.2em;
     padding-top: 0.5em;
 }
+
+@media (max-width: 40em) {
+    .madeorgmain {
+        grid-template-columns: 1fr;
+    }
+}
