--- a/mydemo1/static/mydemo1/css/base.css
+++ b/mydemo1/static/mydemo1/css/base.css
@@ -2,6 +2,7 @@
     margin: 0;
     text-decoration: none;
     box-sizing: border-box;
+    transition: 250ms;
 }
 
 a {
@@ -54,11 +55,19 @@ body {
     display: none;
 }
 
-.nav .right .options:hover>.dropdown-menu {
+
+/* .nav .right .options:hover>.dropdown-menu {
     display: flex;
     flex-direction: column;
     position: absolute;
     background-color: rgb(223, 223, 223);
+} */
+
+.rightOuter .right {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3em;
 }
 
 .nav .right .options .dropdown-menu .dropdown-item {
@@ -70,6 +79,15 @@ body {
 
 .nav .hamburger {
     display: none;
+}
+
+.rightOuter .right .options .dropdown-menu {
+    width: max-content;
+}
+
+.rightOuter .right .options .opticontext {
+    display: flex;
+    margin-right: -1em;
 }
 
 @media (max-width: 40em) {
