--- a/mydemo1/static/mydemo1/css/welcome.css
+++ b/mydemo1/static/mydemo1/css/welcome.css
@@ -25,6 +25,10 @@
     border-radius: 1em;
 }
 
+.logotext:hover {
+    box-shadow: rgba(3, 73, 159, 6) 0px 5px 15px;
+}
+
 .logoimg {
     display: flex;
     justify-content: center;
@@ -35,6 +39,81 @@
 .logotext a {
     font-size: larger;
     font-weight: 700;
+}
+
+.nicetext {
+    margin-top: 1em;
+    padding: 0.3em;
+    width: fit-content;
+    border-radius: 0.5em;
+    /* outline: 0.1em solid blueviolet;
+	 */
+    box-shadow: rgba(0, 0, 0, 5) 0px 5px 15px;
+    color: purple;
+}
+
+.upsale-button {
+    position: relative;
+    z-index: 0;
+    height: 3em;
+    overflow: hidden;
+    border: none !important;
+    padding: 0 !important;
+    background: #5D5DFF !important;
+    color: #656565;
+    background: white;
+    border-radius: 1em;
+    width: max-content;
+    text-align: center;
+    font-size: larger;
+    font-weight: 400;
+    box-shadow: 0 4px 50px 0 rgb(0 0 0 / 7%);
+    transition: .2s all linear;
+    text-decoration: initial;
+}
+
+.upsale-button span {
+    position: relative;
+    z-index: 1;
+    height: calc( 100% - 4px);
+    width: calc( 100% - 4px);
+    top: 2px;
+    left: 2px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    border-radius: 8px;
+    color: white;
+    background: #5D5DFF;
+}
+
+.upsale-button:after {
+    content: "";
+    position: absolute;
+    z-index: -2;
+    left: -50%;
+    top: -50%;
+    width: 200%;
+    height: 200%;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
+    -webkit-animation: rotate 2s linear infinite;
+    animation: rotate 2s linear infinite;
+}
+
+@-webkit-keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @media (max-width: 40em) {
