--- a/mydemo1/templates/mydemo1/allUserOr.html
+++ b/mydemo1/templates/mydemo1/allUserOr.html
@@ -2,6 +2,11 @@
 
 <div class="madeorgouter">
     <h1>Members in Organisation : {{name}}</h1>
+    <!-- <center>
+        <a href="{%url 'madeorganisation' %}">
+			Go back
+		</a>
+    </center> -->
     <table border=1>
         <tr>
             <th>ID</th>
