--- a/mydemo1/templates/mydemo1/renameOr.html
+++ b/mydemo1/templates/mydemo1/renameOr.html
@@ -11,5 +11,10 @@
             </div>
         </form>
     </div>
+    <center>
+        <a href="{%url 'madeorganisation' %}">
+			Go back
+		</a>
+    </center>
 </div>
 {%endblock renameOr%}
