--- a/mydemo1/templates/mydemo1/signup.html
+++ b/mydemo1/templates/mydemo1/signup.html
@@ -1,6 +1,6 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Signup{% endblock title %} {% block signup %}
 <div class="outerregister">
-    <h1>Register From</h1><br>
+    <h1>Join NoteStore Now</h1><br>
     <div class="registermain">
         <form action="#" method="post">
             {% csrf_token %} {% load static %}
