--- a/mydemo1/static/mydemo1/css/base.css
+++ b/mydemo1/static/mydemo1/css/base.css
@@ -21,12 +21,22 @@ body {
 }
 
 .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1em;
     padding-left: 3em;
     border-bottom: 2px solid rgb(131, 131, 131);
+    background-color: rgb(230, 230, 230);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.content-area {
+    padding-top: 5.5em;
 }
 
 .right {
@@ -124,5 +134,8 @@ body {
     }
     .nav .rightOuter {
         /* outline: 2px solid red; */
+    }
+    .content-area {
+        padding-top: 4em;
     }
 }
