--- a/mydemo1/static/mydemo1/css/home.css
+++ b/mydemo1/static/mydemo1/css/home.css
@@ -3,6 +3,7 @@
     height: 80%;
     justify-content: space-evenly;
     align-items: center;
+    width: 100%;
 }
 
 .mainRight {
@@ -28,12 +29,17 @@
     .main {
         flex-direction: column-reverse;
         align-items: center;
+        width: 100vw;
     }
     .mainRight {
-        width: 100%;
+        width: 100vw;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    .mainRight .right {
+        width: 100vw;
+        align-self: center;
     }
     .mainRight img {
         width: auto;
