--- a/mydemo1/static/mydemo1/css/howtouse.css
+++ b/mydemo1/static/mydemo1/css/howtouse.css
@@ -4,7 +4,7 @@ body {
 }
 
 .howtouseouter {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
     justify-content: center;
     /* outline: 0.2em solid rebeccapurple; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
