--- a/mydemo1/templates/mydemo1/base.html
+++ b/mydemo1/templates/mydemo1/base.html
@@ -1,11 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+!
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0">
+
     <title>NoteStore | {%block title%} {% endblock title %}</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="{% static 'mydemo1/css/base.css' %}">
@@ -71,67 +74,70 @@
         </div>
 
     </div>
+    <div class="content-area">
 
-    <div>
-        {% block profile_welcome %} {% endblock profile_welcome %}
+        <div>
+            {% block profile_welcome %} {% endblock profile_welcome %}
+        </div>
+        <div>
+            {% block home %} {% endblock home %}
+        </div>
+        <div>
+            {% block addPhotoNo %} {%endblock addPhotoNo%}
+        </div>
+        <div>
+            {% block addUploaderOr %} {%endblock addUploaderOr%}
+        </div>
+        <div>
+            {% block addUserOr %} {%endblock addUserOr%}
+        </div>
+        <div>
+            {% block createOrganisation %} {%endblock createOrganisation%}
+        </div>
+        <div>
+            {% block error %} {%endblock error%}
+        </div>
+        <div>
+            {% block joinOrganisation %} {%endblock joinOrganisation%}
+        </div>
+        <div>
+            {% block login %} {%endblock login%}
+        </div>
+        <div>
+            {% block madeorganisation %} {%endblock madeorganisation%}
+        </div>
+        <div>
+            {% block myorganisation %} {%endblock myorganisation%}
+        </div>
+        <div>
+            {% block nottheuploader %} {%endblock nottheuploader%}
+        </div>
+        <div>
+            {% block renameOr %} {%endblock renameOr%}
+        </div>
+        <div>
+            {% block signup %} {%endblock signup%}
+        </div>
+        <div>
+            {% block uploadNotesOr %} {%endblock uploadNotesOr%}
+        </div>
+        <div>
+            {% block viewNotesOr %} {%endblock viewNotesOr%}
+        </div>
+        <div>
+            {% block visitNote %} {%endblock visitNote%}
+        </div>
+        <div>
+            {% block renameNo %} {%endblock renameNo%}
+        </div>
+        <div>
+            {% block allUserOr %} {%endblock allUserOr%}
+        </div>
+        <div>
+            {% block howtouse %} {%endblock howtouse%}
+        </div>
     </div>
-    <div>
-        {% block home %} {% endblock home %}
-    </div>
-    <div>
-        {% block addPhotoNo %} {%endblock addPhotoNo%}
-    </div>
-    <div>
-        {% block addUploaderOr %} {%endblock addUploaderOr%}
-    </div>
-    <div>
-        {% block addUserOr %} {%endblock addUserOr%}
-    </div>
-    <div>
-        {% block createOrganisation %} {%endblock createOrganisation%}
-    </div>
-    <div>
-        {% block error %} {%endblock error%}
-    </div>
-    <div>
-        {% block joinOrganisation %} {%endblock joinOrganisation%}
-    </div>
-    <div>
-        {% block login %} {%endblock login%}
-    </div>
-    <div>
-        {% block madeorganisation %} {%endblock madeorganisation%}
-    </div>
-    <div>
-        {% block myorganisation %} {%endblock myorganisation%}
-    </div>
-    <div>
-        {% block nottheuploader %} {%endblock nottheuploader%}
-    </div>
-    <div>
-        {% block renameOr %} {%endblock renameOr%}
-    </div>
-    <div>
-        {% block signup %} {%endblock signup%}
-    </div>
-    <div>
-        {% block uploadNotesOr %} {%endblock uploadNotesOr%}
-    </div>
-    <div>
-        {% block viewNotesOr %} {%endblock viewNotesOr%}
-    </div>
-    <div>
-        {% block visitNote %} {%endblock visitNote%}
-    </div>
-    <div>
-        {% block renameNo %} {%endblock renameNo%}
-    </div>
-    <div>
-        {% block allUserOr %} {%endblock allUserOr%}
-    </div>
-    <div>
-        {% block howtouse %} {%endblock howtouse%}
-    </div>
+
     <script src="{%static 'mydemo1/js/base.js' %}"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
