--- a/mydemo1/templates/mydemo1/visitNote.html
+++ b/mydemo1/templates/mydemo1/visitNote.html
@@ -15,8 +15,8 @@
         </div>
     </div>
     <div class="helps">
-        <h4>⇽ Scroll</h4>
-        <h4>Scroll ⇾</h4>
+        <h4 class="leftscroll" onclick="scrollleft">⇽ Scroll</h4>
+        <h4 class="rightscroll" onclick="scrollright">Scroll ⇾</h4>
     </div>
     <div class="notePicMain">
         {%for i in images%}
