--- a/mydemo1/templates/mydemo1/base.html
+++ b/mydemo1/templates/mydemo1/base.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="{% static 'mydemo1/css/renameOr.css' %}">
     <link rel="stylesheet" href="{% static 'mydemo1/css/createNewNote.css' %}">
     <link rel="stylesheet" href="{% static 'mydemo1/css/howtouse.css' %}">
+    <link rel="stylesheet" href="{% static 'mydemo1/css/addUploaderOr.css' %}">
+    <link rel="stylesheet" href="{% static 'mydemo1/css/nottheuploader.css' %}">
 </head>
 
 <body>
