--- a/mydemo1/templates/mydemo1/addUploaderOr.html
+++ b/mydemo1/templates/mydemo1/addUploaderOr.html
@@ -1,16 +1,18 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Add Uploader{% endblock title %} {% block addUploaderOr %}
 
-<div>
-    <form action="#" method="post">
-        {% csrf_token %} {% load static %}
-        <center>
-            <div class="container">
+<div class="addUploaderOuter">
+    <h1>Add Uploader</h1>
+    <div class="addUploaderMain">
+        <form action="#" method="post">
+            {% csrf_token %} {% load static %}
+            <center>
+                <div class="container">
 
-                <label for='user_id'><b>User ID : </b></label>
-                <input type='number' placeholder="Enter user id to add" name='user_id' required><br>
-                <button type="submit"><b>Make Uploader</b></button><br>
-            </div>
-        </center>
-    </form>
+                    <input type='number' placeholder="Enter user id to add" name='user_id' required><br>
+                    <button type="submit"><b>Make Uploader</b></button><br>
+                </div>
+            </center>
+        </form>
+    </div>
 </div>
 {%endblock addUploaderOr%}
