--- a/mydemo1/templates/mydemo1/howtouse.html
+++ b/mydemo1/templates/mydemo1/howtouse.html
@@ -22,8 +22,8 @@
             <h2>As a non-admin user</h2>
         </div>
         <div class="image">
-            <img src="{%static 'mydemo1/images/Viewer1.png' %}" alt="">
-            <img src="{%static 'mydemo1/images/Viewer2.png' %}" alt="">
+            <img src="{%static 'mydemo1/images/Viewer3.png' %}" alt="">
+            <!-- <img src="{%static 'mydemo1/images/Viewer2.png' %}" alt=""> -->
         </div>
     </div>
 </div>
