--- a/mydemo1/templates/mydemo1/renameNo.html
+++ b/mydemo1/templates/mydemo1/renameNo.html
@@ -1,14 +1,16 @@
 {% extends 'mydemo1/base.html' %} {% load static %} {% block title %}Rename Note{% endblock title %} {% block renameNo %}
 
-<div>
+<div class="renameOrOuter">
     <h1>Rename Note : {{oldName}}</h1>
-    <form action="#" method="post">
-        {% csrf_token %}
-        <div class="container">
-            <label for='note_name'><b>New Title : </b></label>
-            <input type='text' placeholder="Enter Note title" name='note_name' required><br><br>
-            <button type="submit"><b>Rename</b></button><br>
-        </div>
-    </form>
+    <div class="renameOrMain">
+        <form action="#" method="post">
+            {% csrf_token %}
+            <div class="container">
+                <label for='note_name'><b>New Title : </b></label>
+                <input type='text' placeholder="Enter Note title" name='note_name' required><br><br>
+                <button type="submit"><b>Rename</b></button><br>
+            </div>
+        </form>
+    </div>
 </div>
 {%endblock renameNo%}
