--- a/mydemo1/static/mydemo1/css/login.css
+++ b/mydemo1/static/mydemo1/css/login.css
@@ -16,6 +16,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     width: fit-content;
     padding: 1em;
+    border-radius: 1em;
 }
 
 .loginmain form {
