--- a/mydemo1/templates/mydemo1/home.html
+++ b/mydemo1/templates/mydemo1/home.html
@@ -18,6 +18,14 @@
         <h1>
             <span style="color:blue;">easier</span>
         </h1>
+        <br>
+        <div class="options" style="display:flex; width:100%; gap:1em; justify-content: space-between;">
+            <h2><a class="buttonCool" href="{% url 'signup' %}">Join Now</a></h2>
+            <h2><a class="buttonCool" href="{% url 'login' %}">Login</a></h2>
+        </div>
+
+
+
     </div>
     <div class="mainRight">
         <!-- <img src="https://www.integrationworx.com/sites/default/files/styles/webp/public/glazed-cms-media/mdm_pic_1.png.webp?itok=pF5JzprA&fid=1747" alt=""> -->
