--- a/mydemo1/static/mydemo1/css/base.css
+++ b/mydemo1/static/mydemo1/css/base.css
@@ -3,6 +3,7 @@
     text-decoration: none;
     box-sizing: border-box;
     transition: 250ms;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -18,6 +19,8 @@ a:hover {
 
 body {
     background-color: rgb(230, 230, 230);
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 .nav {
