--- a/mydemo1/templates/mydemo1/base.html
+++ b/mydemo1/templates/mydemo1/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-!
+
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0">
 
     <title>NoteStore | {%block title%} {% endblock title %}</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="{% static 'mydemo1/css/base.css' %}">
     <link rel="stylesheet" href="{% static 'mydemo1/css/home.css' %}">
@@ -26,6 +28,7 @@
     <link rel="stylesheet" href="{% static 'mydemo1/css/howtouse.css' %}">
     <link rel="stylesheet" href="{% static 'mydemo1/css/addUploaderOr.css' %}">
     <link rel="stylesheet" href="{% static 'mydemo1/css/nottheuploader.css' %}">
+
 </head>
 
 <body>
