--- a/mydemo1/templates/mydemo1/visitNote.html
+++ b/mydemo1/templates/mydemo1/visitNote.html
@@ -33,7 +33,12 @@
                 <div>
                     <h6>{{i.9}}</h6>
                 </div>
+                <div class="options">
+                    <a href="{%url 'deletePhoto' pk=i.1%}">Delete</a>
+
+                </div>
             </div>
+
         </div>
         {%endfor%}
 
