--- a/mydemo1/static/mydemo1/css/viewnotes.css
+++ b/mydemo1/static/mydemo1/css/viewnotes.css
@@ -14,13 +14,13 @@
 
 .viewnotesmain .item .action {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2em;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
     margin-top: 2em;
 }
 
 .viewnotesmain .item .itemlogo img {
-    height: 15em;
+    height: 10em;
     width: auto;
 }
 
@@ -41,6 +41,12 @@
     border-radius: 0.5em;
     text-align: center;
     padding: 0.5em;
+}
+
+.viewnotesmain .item .action .deletethis {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    background-color: rgb(217, 15, 15);
 }
 
 @media (max-width: 40em) {
