Added Remove user and Leave organisation options

--- a/mydemo1/static/mydemo1/css/login.css
+++ b/mydemo1/static/mydemo1/css/login.css
@@ -59,4 +59,7 @@
     .loginmain form {
         width: 100%;
     }
+    .outerlogin .loginmain form .container input {
+        font-size: medium;
+    }
 }
