--- a/mydemo1/templates/mydemo1/signup.html
+++ b/mydemo1/templates/mydemo1/signup.html
@@ -13,7 +13,7 @@
                 <button type="submit"><b>Signup</b></button><br>
             </div>
         </form>
-        <h3>Already an accounct <a href="{%url 'login' %}"> Login </a></h3>
+        <h3>Already have an account: <a href="{%url 'login' %}"> Login </a></h3>
     </div>
 </div>
 {%endblock signup%}
