--- a/mydemo1/static/mydemo1/css/nottheuploader.css
+++ b/mydemo1/static/mydemo1/css/nottheuploader.css
@@ -11,7 +11,7 @@
 .outerUploadError .main {
     display: flex;
     flex-direction: column;
-    width: max-content;
+    width: 100%;
     align-items: start;
     background-color: rgba(255, 0, 0, 0.23);
     padding: 1em;
@@ -22,4 +22,14 @@
     /* width: 100%; */
     display: flex;
     flex-direction: column;
+}
+
+@media (max-width: 40em) {
+    .outerUploadError * {
+        font-size: medium;
+    }
+    .outerUploadError .main {
+        width: 100%;
+        height: auto;
+    }
 }
