--- a/mydemo1/static/mydemo1/css/visitNote.css
+++ b/mydemo1/static/mydemo1/css/visitNote.css
@@ -131,6 +131,7 @@ body {
         transition: 250ms;
         padding: 0;
         height: 14em;
+        max-height: 100%;
         object-fit: contain;
     }
     .notePicOuter .notePicMain .item .pic img {
