--- a/mydemo1/templates/mydemo1/login.html
+++ b/mydemo1/templates/mydemo1/login.html
@@ -13,7 +13,7 @@
 
             </div>
         </form>
-        <h3>Don't have accounct <a href="{%url 'signup' %}"> register </a></h3>
+        <h3>Don't have an account: <a href="{%url 'signup' %}"> register </a></h3>
     </div>
 </div>
 {%endblock login%}
