--- a/mydemo1/templates/mydemo1/viewNotesOr.html
+++ b/mydemo1/templates/mydemo1/viewNotesOr.html
@@ -21,18 +21,18 @@
                 <div>
                     Upload date and time: {{i.2}}
                 </div>
-                <div>
+                <!-- <div>
                     Uploader ID: {{i.3}}
-                </div>
+                </div> -->
                 <div>
                     Organisation ID: {{i.4}}
                 </div>
-                <div>
+                <!-- <div>
                     Uploader: {{i.6}} {{i.7}}
-                </div>
-                <div>
+                </div> -->
+                <!-- <div>
                     Uploader email: {{i.8}}
-                </div>
+                </div> -->
             </div>
             <div class="action">
                 <a href="{%url 'visitNote' pk=i.0%}">Open</a>
