--- a/mydemo1/templates/mydemo1/welcome.html
+++ b/mydemo1/templates/mydemo1/welcome.html
@@ -3,7 +3,14 @@
     alert(`{% for message in messages %}
     {{ message }}
         {% endfor %}
-		`)
+    	`)
+
+    // var message = document.querySelector('.messages');
+
+    // If there is a message, show it in an alert box
+    // if (message) {
+    //     alert(message);
+    // }
 </script>
 {% endif %}
 <div class="outerwelcome">
